@@ -30,7 +30,7 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 public class PatientProfileAddressSteps {
 
-  private final Faker faker = new Faker(new Locale("en-us"));
+  private final Faker faker = new Faker(Locale.of("en-us"));
 
   @Autowired
   PatientMother mother;
